# barrett_control

./: .gitignore  CMakeLists.txt  README.md  manifest.xml  mtsWAM.h  osaBH8_280.h  osaGroup.h  osaPuck.h  osaWAM.h  stack.xml
bard_common/: CMakeLists.txt  mainpage.dox  manifest.xml
bard_common/include/bard_common/: time_lord.h  util.h
bard_common/src/: bard_common.cpp  util.cpp
bard_component_interfaces/: CMakeLists.txt  (+1 more)
bard_components/: CMakeLists.txt  manifest.xml
bard_components/include/bard_components/: bard_components-component.hpp  bard_components-types.hpp  controller_mux.h  util.h  wam.h
bard_components/include/bard_components/controllers/: cartesian.h  gravity_compensation.h  joint_pid.h  joint_trajectory.h  pose.h  trivial.h  wrench.h
bard_components/launch/: left_params.launch  left_params.yaml  wam_test.launch
bard_components/scripts/: test_wam.ops  wam_test.ops
bard_components/src/: bard_components-component.cpp  bard_components-plugin.cpp  bard_components-service.cpp  bard_components.cpp  controller_mux.cpp  support.cpp  util.cpp  wam.cpp
bard_components/src/controllers/: cartesian.cpp  gravity_compensation.cpp  joint_pid.cpp  joint_trajectory.cpp  pose.cpp  trivial.cpp  wrench.cpp
bard_components/test/: joint_trajectory_test.py
bard_controllers/: CMakeLists.txt  mainpage.dox  manifest.xml
bard_controllers/include/bard_components/: controller_mux.h
bard_controllers/include/bard_components/controllers/: cartesian.h  joint_pid.h  joint_trajectory.h  pose.h
bard_controllers/include/bard_controllers/: controller_mux.h  trajectory_dispatcher.h
bard_controllers/include/bard_controllers/controllers/: cartesian.h  gravity_compensation.h  joint_pid.h  joint_trajectory.h  pose.h  trivial.h  wrench.h
bard_controllers/launch/: controller_test.launch  controllers.launch  test_controllers.launch
bard_controllers/scripts/: controller_test.ops  test_controllers.ops
bard_controllers/src/: bard_controllers.cpp  controller_mux.cpp  trajectory_dispatcher.cpp
bard_controllers/src/controllers/: cartesian.cpp  gravity_compensation.cpp  joint_pid.cpp  joint_trajectory.cpp  pose.cpp  trivial.cpp  wrench.cpp
bard_controllers/test/: joint_trajectory_test.py
bard_simulation/: CMakeLists.txt  manifest.xml
bard_simulation/include/bard_simulation/: wam_stub.h
bard_simulation/launch/: left_params.launch  test_wam_stub.launch  wam_stub.launch  wam_stub_test.launch
bard_simulation/scripts/: test_wam_stub.ops  wam_stub_test.ops
bard_simulation/src/: bard_hardware.cpp  wam_stub.cpp
barrett_control_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
barrett_control_msgs/msg/: JointCommand.msg  JointEffortCommand.msg  SemiAbsoluteCalibrationState.msg
barrett_control_msgs/srv/: Calibrate.srv
barrett_controllers/: CMakeLists.txt  README.md  controllers_plugins.xml  mainpage.dox  manifest.xml  package.xml
barrett_controllers/include/barrett_controllers/: calibration_controller.h
barrett_controllers/src/: calibration_controller.cpp
barrett_direct/: CMakeLists.txt  manifest.xml  package.xml
barrett_direct/bard_hardware/scripts/: test_wam.ops
barrett_direct/bard_integration_tests/: manifest.xml
barrett_direct/bard_integration_tests/launch/: test_wam_controllers.launch
barrett_direct/bard_simulation/launch/: test_wam_stub.launch
barrett_direct/bard_simulation/scripts/: test_wam_stub.ops
barrett_direct/bard_urdf/models/: common.urdf.xacro  components.urdf.xacro
barrett_direct/bard_urdf/models/componentSTL/: lowerPanUnit.stl  upperTiltUnitLink.stl
barrett_direct/bard_urdf/robots/: wam_4dof_wam_right.urdf.xacro
barrett_direct/barrett_direct/examples/: osaWAMPDGCExample.cpp  wam_test.cpp
barrett_direct/barrett_direct/src/: BH8_280.cpp
barrett_direct/examples/: osaGroupExample.cpp  osaWAMGCExample.cpp  wam_test.cpp
barrett_direct/experimental/bard_kinematics/: mainpage.dox  manifest.xml
barrett_direct/include/barrett_direct/: BH8_280.h  Group.h  Puck.h  WAM.h
barrett_direct/src/: BH8_280.cpp  Group.cpp  Puck.cpp  WAM.cpp
barrett_hw/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
barrett_hw/include/barrett_hw/: wam.h
barrett_hw/launch/: example.launch  left_params.launch  test_wam.launch
barrett_hw/scripts/: calibrate.py
barrett_hw/src/: wam.cpp  wam_server.cpp
barrett_model/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  stack.xml
barrett_model/bard_component_interfaces/: manifest.xml
barrett_model/bard_hardware/: manifest.xml
barrett_model/bard_hardware/launch/: wam_component.launch
barrett_model/bard_hardware/src/: wam.cpp
barrett_model/bard_integration_tests/scripts/: test_wam_controllers.ops
barrett_model/bard_simulation/: CMakeLists.txt
barrett_model/bard_simulation/launch/: wam_stub.launch
barrett_model/bard_simulation/src/: bard_simulation.cpp  wam_stub.cpp
barrett_model/bard_urdf/launch/: two_arms_test.launch
barrett_model/bard_urdf/models/: hand.urdf.xacro
barrett_model/bard_urdf/robots/: wam_7dof_2x.urdf.xacro  wam_7dof_wam_left.urdf.xacro
barrett_model/barrett_direct/: CMakeLists.txt
barrett_model/include/barrett_model/: semi_absolute_joint_interface.h  wam_interface.h
barrett_model/launch/: two_arms_test.launch  wam_7dof_params.launch
barrett_model/models/: arm.urdf.xacro  common.urdf.xacro  components.urdf.xacro  hand.urdf.xacro  wam_7dof.urdf.xacro  wam_top.urdf.xacro
barrett_model/models/componentSTL/: Re2_Head.DAE  bench_lattice.dae  lowerTiltBeamsLink.DAE  skinMesh.stl
barrett_model/robots/: wam_4dof_wam.urdf.xacro  wam_4dof_wam_left.urdf.xacro  wam_4dof_wam_right.urdf.xacro  wam_7dof_2x.urdf.xacro  wam_7dof_wam.urdf.xacro
barrett_sim/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
code/: CMakeLists.txt  mtsPuck.cpp  mtsWAM.cpp  osaGroup.cpp  osaPuck.cpp  osaWAM.cpp
examples/: CMakeLists.txt  mtsPuckExample.cpp  mtsWAMExample.cpp  mtsWAMGCExample.cpp  mtsWAMPDGCExample.cpp  osaBH8_280Example.cpp  osaGroupExample.cpp  osaPuckExample.cpp  osaWAMExample.cpp  osaWAMGCExample.cpp  osaWAMPDGCExample.cpp  wam_example.cpp
(+276 files in other folders)
