<package>
  <name>barrett_control_msgs</name>
  <version>0.1.0</version>
  <description>barrett_control_msgs</description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/barrett_control_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jonathan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
