<package>
  <name>barrett_hw</name>
  <version>0.1.0</version>
  <description>barrett_hw</description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/barrett_hw</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jonathan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>barrett</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>barrett_model</build_depend>
  <build_depend>kdl_urdf_tools</build_depend>
  <build_depend>terse_roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>barrett_controllers</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>xenomai_ros</build_depend>

  <run_depend>barrett</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>barrett_model</run_depend>
  <run_depend>kdl_urdf_tools</run_depend>
  <run_depend>terse_roscpp</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>barrett_controllers</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>rospy</run_depend>
  <!-- <test_depend>hardware_interface</test_depend> -->
  <!-- <test_depend>barrett_direct</test_depend> -->
  <!-- <test_depend>barrett_model</test_depend> -->
  <!-- <test_depend>kdl_urdf_tools</test_depend> -->
  <!-- <test_depend>terse_roscpp</test_depend> -->
  <!-- <test_depend>controller_manager</test_depend> -->
  <!-- <test_depend>barrett_controllers</test_depend> -->
  <!-- <test_depend>control_toolbox</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->

  <export>

  </export>
</package>
